<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_TD20Status" Id="{4114394e-9b7d-4381-aa92-5499001256f3}">
    <Declaration><![CDATA[TYPE ST_TD20Status :  (* Serial communication defined in Oerlikon Leybold Manual 17200048 *)
STRUCT
    /// Received Status Word
    wStatusWord: WORD;
    /// Current stator frequency
    {attribute 'pytmc' := '
    pv: Frequency;
    io: i;
    '}
    wFrequency_P3: WORD;
    /// Current intermediate circuit voltage
    {attribute 'pytmc' := '
    pv: Voltage;
    io: i;
    '}
    wVoltage_P4: WORD;
    /// Current motor current
    {attribute 'pytmc' := '
    pv: MotorCurrent;
    io: i;
    '}
    wMotorCurrent_P5: WORD;
    /// Current frequency converter temperature
    {attribute 'pytmc' := '
    pv: Temperature;
    io: i;
    '}
    wConverterTemp_P11: WORD;
    /// Critical frequency
    {attribute 'pytmc' := '
    pv: CriticalFrequency;
    io: i;
    '}
    wCriticalFreq_P20: WORD;
    /// Max. Current Factor
    {attribute 'pytmc' := '
    pv: MaxCurrentFactor;
    io: i;
    '}
    wMaxCurrentFactor_P21: WORD;
    /// Setpoint Frequecy
    {attribute 'pytmc' := '
    pv: SetPointFreq;
    io: i;
    '}
    wSetpointFreq_P24: WORD;
    /// Max. run up time
    {attribute 'pytmc' := '
    pv: MaxRunUpTime;
    io: i;
    '}
    wMaxRunUpTime_P32: WORD;
    /// Current pump temperature
    {attribute 'pytmc' := '
    pv: PumpTemp;
    io: i;
    '}
    wPumpTemp_P127: WORD;
    /// most recent error code
    {attribute 'pytmc' := '
    pv: ErrorCode;
    io: i;
    '}
    wErrorCode_P171: WORD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>